--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -1,18 +1,19 @@
 version: '3'
 services:
-  demo_api:
+  tos_api:
     tty: true
     build:
       context: .
     environment:
       DB_USERNAME: ${POSTGRES_USER}
       DB_PASSWORD: ${POSTGRES_PASSWORD}
+      DB_HOST: ${POSTGRES_HOST}
     volumes:
       - .:/api
     ports:
       - '3000:3000'
 
-  demo_db:
+  tos_db:
     image: postgres:16.3
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
@@ -25,4 +26,4 @@ services:
 networks:
   default:
     external:
-      name: demo_gateway
+      name: tos_gateway
